<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_europe">Port of Rotterdam is the largest port in Europe. </string>
    <string name="question_ocean">The Pacific Ocean lies between Europe and America.</string>
    <string name="question_city">The Eternal City’ refers to Paris.</string>
    <string name="question_river">The world’s longest river is the Nile River.</string>
    <string name="question_americas">Argentina is the largest country in South America</string>
    <string name="question_asia">Asia is the largest continent on the earth.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="cheat_button">Cheat!</string>
    <string name="previous_button">prev</string>
    <string name="next_button">next</string>
    <string name="warning_message">Are you sure you want to cheat?</string>
    <string name="show_answer">show answer</string>
    <string name="judgement_toast">Cheating is wrong.</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

</resources>
